--- a/index.html
+++ b/index.html
@@ -5,11 +5,211 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>VENUS</title>
+    <!-- font awesome  -->
+    <script src="https://kit.fontawesome.com/ff8b72fabf.js" crossorigin="anonymous"></script>
+    <!-- Bootstrap link  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- custom style  -->
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
+    <!-- header section  -->
+    <header>
+        <!-- header navbar  -->
+        <section>
+            <div class="container">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light py-4">
+                    <div class="container-fluid fs-1 fw-bolder">
+                        <a class="navbar-brand" href="#"><span class="text-primary">VENUS</span> Convention Hall</a>
+                    </div>
+                </nav>
+            </div>
+        </section>
+        <!-- header slider  -->
+        <section>
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/banner.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 class="fs-2">The perfect venue for your <br> next event</h5>
+                            <p class="fw-light">We give people a place to gather, invent, and celebrate. We know that
+                                what we do in here
+                                matters out there.</p>
+                            <a target="_blank" class="btn btn-light text-primary fs-4 fw-bold px-5 py-1 "
+                                href="https://www.booking.com/index.en.html?aid=309654;label=hotels-english-en-row-ugh58fqe1eomojTnWeaw2wS541037160700:pl:ta:p1:p22,563,000:ac:ap:neg:fi:tiaud-922652056022:kwd-17218370:lp9074048:li:dec:dm:ppccp=UmFuZG9tSVYkc2RlIyh9YcsZ-Id2vkzIfTmYhvC5HOg;ws=&gclid=Cj0KCQiAubmPBhCyARIsAJWNpiNOfBE5fIpuTjUbdll6jCcwdJROuY_39oEyzBroXjrx1h8PdYaXNg0aAgKiEALw_wcB"
+                                role="button">Book
+                                Now</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/banner-2.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 class="fs-2">WE ARE A CENTER IN MOTION</h5>
+                            <p class="fw-light">We are motion. We are action. We are creative, we are a dynamic center
+                                in a dynamic place.</p>
+                            <a target="_blank" class="btn btn-light text-primary fs-4 fw-bold px-5 py-1 "
+                                href="https://www.booking.com/index.en.html?aid=309654;label=hotels-english-en-row-ugh58fqe1eomojTnWeaw2wS541037160700:pl:ta:p1:p22,563,000:ac:ap:neg:fi:tiaud-922652056022:kwd-17218370:lp9074048:li:dec:dm:ppccp=UmFuZG9tSVYkc2RlIyh9YcsZ-Id2vkzIfTmYhvC5HOg;ws=&gclid=Cj0KCQiAubmPBhCyARIsAJWNpiNOfBE5fIpuTjUbdll6jCcwdJROuY_39oEyzBroXjrx1h8PdYaXNg0aAgKiEALw_wcB"
+                                role="button">Book
+                                Now</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/banner-3.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 class="fs-2">WE ARE FORWARD THINKING</h5>
+                            <p class="fw-light">Passionate about serving people and planet. Working toward positive
+                                change, and endless possibility.</p>
+                            <a target="_blank" class="btn btn-light text-primary fs-4 fw-bold px-5 py-1 "
+                                href="https://www.booking.com/index.en.html?aid=309654;label=hotels-english-en-row-ugh58fqe1eomojTnWeaw2wS541037160700:pl:ta:p1:p22,563,000:ac:ap:neg:fi:tiaud-922652056022:kwd-17218370:lp9074048:li:dec:dm:ppccp=UmFuZG9tSVYkc2RlIyh9YcsZ-Id2vkzIfTmYhvC5HOg;ws=&gclid=Cj0KCQiAubmPBhCyARIsAJWNpiNOfBE5fIpuTjUbdll6jCcwdJROuY_39oEyzBroXjrx1h8PdYaXNg0aAgKiEALw_wcB"
+                                role="button">Book
+                                Now</a>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+    </header>
+    <!-- main section  -->
+    <main>
+        <!-- Image Gallery for bouns part  -->
+        <section class="image-gallery">
 
+        </section>
+        <section class="container packege">
+            <div class="package-heading">
+                <h2 class="fs-3 fw-bold text-center py-5 packeg-heading">Our package</h2>
+            </div>
+            <div class="packages d-flex justify-content-evenly">
+                <div class="package">
+                    <div class="card border-0 mb-3 pt4" style="max-width: 18rem;">
+                        <div class="card-header border-0 bg-transparent fs-2 fw-bold packeg-color">$300</div>
+                        <div class="card-body text-start">
+                            <h5 class="card-title packeg-color">Business fair</h5>
+                            <p class="card-text packeg-color fw-lighter">For most businesses event
+                                like book fair, craft fair.</p>
+                            <ul class="fa-ul packeg-color fw-lighter">
+                                <li><span class="fa-li"><i class="far fa-check-circle"></i></span>limited space access
+                                </li>
+                                <li><span class="fa-li"><i class="far fa-check-circle"></i></span>Secuirty facility
+                                </li>
+                                <li><span class="fa-li"><i class="far fa-check-circle"></i></span>event support</li>
+                                <li><span class="fa-li"><i class="far fa-check-circle"></i></span>Decoration design
+                                </li>
+                                <li><span class="fa-li"><i class="far fa-check-circle"></i></span>Per day bill
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="card-footer bg-transparent border-0"><a target="_blank"
+                                class="btn btn-light text-primary fs-5 fw-bold px-3 py-1 "
+                                href="https://www.booking.com/index.en.html?aid=309654;label=hotels-english-en-row-ugh58fqe1eomojTnWeaw2wS541037160700:pl:ta:p1:p22,563,000:ac:ap:neg:fi:tiaud-922652056022:kwd-17218370:lp9074048:li:dec:dm:ppccp=UmFuZG9tSVYkc2RlIyh9YcsZ-Id2vkzIfTmYhvC5HOg;ws=&gclid=Cj0KCQiAubmPBhCyARIsAJWNpiNOfBE5fIpuTjUbdll6jCcwdJROuY_39oEyzBroXjrx1h8PdYaXNg0aAgKiEALw_wcB"
+                                role="button">Choose plan</a></div>
+                    </div>
+                </div>
+                <div class="package">
+                    <div class="card border-0 mb-3 pt-4" style="max-width: 18rem;">
+                        <div class="card-header border-0 bg-transparent fs-2 fw-bold packeg-color ">$500</div>
+                        <div class="card-body text-start">
+                            <h5 class="card-title packeg-color">wedding basic</h5>
+                            <p class="card-text packeg-color fw-lighter">For weddings with basic plan
+                                and limited item.</p>
+                            <ul class="fa-ul packeg-color fw-lighter">
+                                <li><span class="fa-li"><i class="far fa-check-circle"></i></span>Full space access
+                                </li>
+                                <li><span class="fa-li"><i class="far fa-check-circle"></i></span>Food arrangement
+                                </li>
+                                <li><span class="fa-li"><i class="far fa-check-circle"></i></span>mangement support</li>
+                                <li><span class="fa-li"><i class="far fa-check-circle"></i></span>Decoration design
+                                </li>
+                                <li><span class="fa-li"><i class="far fa-check-circle"></i></span>Billed as shift
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="card-footer bg-transparent border-0"><a target="_blank"
+                                class="btn btn-light text-primary fs-5 fw-bold px-3 py-1 "
+                                href="https://www.booking.com/index.en.html?aid=309654;label=hotels-english-en-row-ugh58fqe1eomojTnWeaw2wS541037160700:pl:ta:p1:p22,563,000:ac:ap:neg:fi:tiaud-922652056022:kwd-17218370:lp9074048:li:dec:dm:ppccp=UmFuZG9tSVYkc2RlIyh9YcsZ-Id2vkzIfTmYhvC5HOg;ws=&gclid=Cj0KCQiAubmPBhCyARIsAJWNpiNOfBE5fIpuTjUbdll6jCcwdJROuY_39oEyzBroXjrx1h8PdYaXNg0aAgKiEALw_wcB"
+                                role="button">Choose plan</a></div>
+                    </div>
+                </div>
+                <div class="package">
+                    <div class="card border-0 mb-3 pt-5 pb-3 package-3" style="max-width: 18rem;">
+                        <div class="card-header border-0 bg-transparent fs-2 fw-bold text-white">$800</div>
+                        <div class="card-body text-start">
+                            <h5 class="card-title text-white">Wedding plus</h5>
+                            <p class="card-text text-white fw-lighter">For most weddings with premium plans.
+                            </p>
+                            <ul class="fa-ul text-white fw-lighter">
+                                <li><span class="fa-li"><i class="far fa-check-circle"></i></span>Full space access
+                                </li>
+                                <li><span class="fa-li"><i class="far fa-check-circle"></i></span>Dedicated team
+                                </li>
+                                <li><span class="fa-li"><i class="far fa-check-circle"></i></span>Buffet food</li>
+                                <li><span class="fa-li"><i class="far fa-check-circle"></i></span>premium Decoration
+                                </li>
+                                <li><span class="fa-li"><i class="far fa-check-circle"></i></span>pay as plan
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="card-footer bg-transparent border-0"><a target="_blank"
+                                class="btn btn-light text-primary fs-5 fw-bold px-3 py-1 rounded-pill"
+                                href="https://www.booking.com/index.en.html?aid=309654;label=hotels-english-en-row-ugh58fqe1eomojTnWeaw2wS541037160700:pl:ta:p1:p22,563,000:ac:ap:neg:fi:tiaud-922652056022:kwd-17218370:lp9074048:li:dec:dm:ppccp=UmFuZG9tSVYkc2RlIyh9YcsZ-Id2vkzIfTmYhvC5HOg;ws=&gclid=Cj0KCQiAubmPBhCyARIsAJWNpiNOfBE5fIpuTjUbdll6jCcwdJROuY_39oEyzBroXjrx1h8PdYaXNg0aAgKiEALw_wcB"
+                                role="button">Choose plan</a></div>
+                    </div>
+                </div>
+                <div class="package">
+                    <div class="card border-0 mb-3 pt-4" style="max-width: 18rem;">
+                        <div class="card-header border-0 bg-transparent fs-2 fw-bold packeg-color">$1200</div>
+                        <div class="card-body text-start">
+                            <h5 class="card-title packeg-color">Corporate event</h5>
+                            <p class="card-text packeg-color fw-lighter">For most corporate business
+                                events.</p>
+                            <ul class="fa-ul packeg-color fw-lighter">
+                                <li><span class="fa-li"><i class="far fa-check-circle"></i></span>Full space access
+                                </li>
+                                <li><span class="fa-li"><i class="far fa-check-circle"></i></span>Dedicated team
+                                </li>
+                                <li><span class="fa-li"><i class="far fa-check-circle"></i></span>Buffet food</li>
+                                <li><span class="fa-li"><i class="far fa-check-circle"></i></span>premium Decoration
+                                </li>
+                                <li><span class="fa-li"><i class="far fa-check-circle"></i></span>pay as plan
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="card-footer bg-transparent border-0"><a target="_blank"
+                                class="btn btn-light text-primary fs-5 fw-bold px-3 py-1 "
+                                href="https://www.booking.com/index.en.html?aid=309654;label=hotels-english-en-row-ugh58fqe1eomojTnWeaw2wS541037160700:pl:ta:p1:p22,563,000:ac:ap:neg:fi:tiaud-922652056022:kwd-17218370:lp9074048:li:dec:dm:ppccp=UmFuZG9tSVYkc2RlIyh9YcsZ-Id2vkzIfTmYhvC5HOg;ws=&gclid=Cj0KCQiAubmPBhCyARIsAJWNpiNOfBE5fIpuTjUbdll6jCcwdJROuY_39oEyzBroXjrx1h8PdYaXNg0aAgKiEALw_wcB"
+                                role="button">Choose plan</a></div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </main>
+    <!-- Bootstrap Js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
