package all done

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- header section  -->
     <header>
         <!-- header navbar  -->
-        <section>
+        <section class="bg-light">
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light py-4">
                     <div class="container-fluid fs-1 fw-bolder">
@@ -103,7 +103,7 @@
             </div>
             <div class="packages d-flex justify-content-evenly">
                 <div class="package">
-                    <div class="card border-0 mb-3 pt4" style="max-width: 18rem;">
+                    <div class="card border-0 mb-3 pt-4 px-2" style="max-width: 18rem;">
                         <div class="card-header border-0 bg-transparent fs-2 fw-bold packeg-color">$300</div>
                         <div class="card-body text-start">
                             <h5 class="card-title packeg-color">Business fair</h5>
@@ -128,7 +128,7 @@
                     </div>
                 </div>
                 <div class="package">
-                    <div class="card border-0 mb-3 pt-4" style="max-width: 18rem;">
+                    <div class="card border-0 mb-3 pt-4 px-2" style="max-width: 18rem;">
                         <div class="card-header border-0 bg-transparent fs-2 fw-bold packeg-color ">$500</div>
                         <div class="card-body text-start">
                             <h5 class="card-title packeg-color">wedding basic</h5>
@@ -152,8 +152,8 @@
                                 role="button">Choose plan</a></div>
                     </div>
                 </div>
-                <div class="package">
-                    <div class="card border-0 mb-3 pt-5 pb-3 package-3" style="max-width: 18rem;">
+                <div class="package position-relative">
+                    <div class="card border-0 mb-5 pt-5 pb-3 px-2 package-3" style="max-width: 18rem;">
                         <div class="card-header border-0 bg-transparent fs-2 fw-bold text-white">$800</div>
                         <div class="card-body text-start">
                             <h5 class="card-title text-white">Wedding plus</h5>
@@ -172,13 +172,16 @@
                             </ul>
                         </div>
                         <div class="card-footer bg-transparent border-0"><a target="_blank"
-                                class="btn btn-light text-primary fs-5 fw-bold px-3 py-1 rounded-pill"
+                                class="btn btn-light text-primary fs-5 fw-bold px-5 py-1 rounded-pill"
                                 href="https://www.booking.com/index.en.html?aid=309654;label=hotels-english-en-row-ugh58fqe1eomojTnWeaw2wS541037160700:pl:ta:p1:p22,563,000:ac:ap:neg:fi:tiaud-922652056022:kwd-17218370:lp9074048:li:dec:dm:ppccp=UmFuZG9tSVYkc2RlIyh9YcsZ-Id2vkzIfTmYhvC5HOg;ws=&gclid=Cj0KCQiAubmPBhCyARIsAJWNpiNOfBE5fIpuTjUbdll6jCcwdJROuY_39oEyzBroXjrx1h8PdYaXNg0aAgKiEALw_wcB"
                                 role="button">Choose plan</a></div>
                     </div>
+                    <span class="position-absolute top-0 start-50 translate-middle badge rounded-pill bg-danger">
+                        HOT
+                    </span>
                 </div>
                 <div class="package">
-                    <div class="card border-0 mb-3 pt-4" style="max-width: 18rem;">
+                    <div class="card border-0 mb-3 pt-4 px-2" style="max-width: 18rem;">
                         <div class="card-header border-0 bg-transparent fs-2 fw-bold packeg-color">$1200</div>
                         <div class="card-body text-start">
                             <h5 class="card-title packeg-color">Corporate event</h5>
