all done bouns start

--- a/index.html
+++ b/index.html
@@ -299,33 +299,33 @@
             </div>
         </section>
     </main>
-    <footer class="container-fluid">
+    <footer class="container-fluid py-5 bg-dark">
         <div class="container">
-            <div class="row">
-                <div class="col-6">
-                    <p>© 2022 Alamin. All rights reserved</p>
+            <div class="row align-items-center justify-content-between ">
+                <div class="col-12 col-md-6 col-lg-6">
+                    <p class="text-white">© 2022 Alamin. All rights reserved</p>
                 </div>
-                <div class="col-6">
-                    <h4>Get the App</h4>
+                <div class="col-12 col-md-3 col-lg-3">
+                    <h4 class="text-white">Get the App</h4>
                     <div>
-                        <button type="button" class="btn app-btn px-4 py-1 rounded-3">
-                            <a class="text-white d-flex text-decoration-none justify-content-between"
+                        <button type="button" class="btn app-btn px-3 py-0 rounded-3 mb-1">
+                            <a class="text-white d-flex text-decoration-none"
                                 href="https://apps.apple.com/us/app/photo-editor/id546821797">
                                 <span class=" fs-3 pe-2"><i class="fab fa-apple"></i></span>
                                 <div class=" fw-lighter">
-                                    <small>Download</small><br>
+                                    <small>Download onthe</small><br>
                                     App Store
                                 </div>
                             </a>
                         </button>
                     </div>
                     <div>
-                        <button type="button" class="btn app-btn px-4 py-1 rounded-3">
-                            <a class="text-white d-flex text-decoration-none justify-content-between"
+                        <button type="button" class="btn app-btn px-4 py-0 rounded-3">
+                            <a class="text-white d-flex text-decoration-none"
                                 href="https://play.google.com/store/apps/details?id=photo.editor.photoeditor.photoeditorpro&hl=en&gl=US">
                                 <span class="fs-4 pe-2"><i class="fab fa-google-play"></i></span>
                                 <div class=" fw-lighter">
-                                    <small>Get It Now</small> <br>
+                                    <small>Get it on</small> <br>
                                     Google Play
                                 </div>
                             </a>
@@ -333,7 +333,6 @@
                     </div>
                 </div>
             </div>
-        </div>
         </div>
     </footer>
 
