--- a/index.html
+++ b/index.html
@@ -96,7 +96,23 @@
     <main class="container">
         <!-- Image Gallery for bouns part  -->
         <section class="image-gallery">
-
+            <div class="package-heading">
+                <h2 class="fs-3 fw-bold text-center py-5 packeg-heading">Image Gallery</h2>
+            </div>
+            <div class="row gy-3">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-4"><img src="image-gallery/image-2.jpg" alt=""
+                        class="img-thumbnail"></div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-4"><img src="image-gallery/image-7.jpg" alt=""
+                        class="img-thumbnail"></div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-4"><img src="image-gallery/image-4.jpg" alt=""
+                        class="img-thumbnail"></div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-4"><img src="image-gallery/image-11.jpg" alt=""
+                        class="img-thumbnail"></div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-4"><img src="image-gallery/image-5.jpg" alt=""
+                        class="img-thumbnail"></div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-4"><img src="image-gallery/image-6.jpg" alt=""
+                        class="img-thumbnail"></div>
+            </div>
         </section>
         <!-- Our package start  -->
         <section>
@@ -293,7 +309,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-12 col-md-12 col-lg-6 order-md-1 order-lg-2 order-sm-1 order-1">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-6 order-md-1 order-lg-2 order-sm-1 order-1 text-center">
                     <img class="img-fluid" src="images/people.png" alt="">
                 </div>
             </div>
@@ -306,28 +322,19 @@
                     <p class="text-white">© 2022 Alamin. All rights reserved</p>
                 </div>
                 <div class="col-12 col-md-3 col-lg-3">
-                    <h4 class="text-white">Get the App</h4>
-                    <div>
-                        <button type="button" class="btn app-btn px-3 py-0 rounded-3 mb-1">
-                            <a class="text-white d-flex text-decoration-none"
-                                href="https://apps.apple.com/us/app/photo-editor/id546821797">
-                                <span class=" fs-3 pe-2"><i class="fab fa-apple"></i></span>
-                                <div class=" fw-lighter">
-                                    <small>Download onthe</small><br>
-                                    App Store
-                                </div>
+                    <h4 class="text-white fw-normal fs-5 ms-3">Get the App</h4>
+                    <div class="image-icon">
+                        <button type="button" class="btn">
+                            <a href="https://apps.apple.com/us/app/photo-editor/id546821797">
+                                <img src="icons/appstore.svg" class="img-fluid" alt="">
                             </a>
                         </button>
                     </div>
-                    <div>
-                        <button type="button" class="btn app-btn px-4 py-0 rounded-3">
-                            <a class="text-white d-flex text-decoration-none"
+                    <div class="image-icon">
+                        <button type="button" class="btn">
+                            <a
                                 href="https://play.google.com/store/apps/details?id=photo.editor.photoeditor.photoeditorpro&hl=en&gl=US">
-                                <span class="fs-4 pe-2"><i class="fab fa-google-play"></i></span>
-                                <div class=" fw-lighter">
-                                    <small>Get it on</small> <br>
-                                    Google Play
-                                </div>
+                                <img src="icons/googleplay.svg" class="img-fluid" alt="">
                             </a>
                         </button>
                     </div>
