--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </div>
         </section>
         <!-- Our package start  -->
-        <section>
+        <section class="position-relative">
             <div class="package-heading">
                 <h2 class="fs-3 fw-bold text-center py-5 packeg-heading">Our package</h2>
             </div>
@@ -226,6 +226,12 @@
                                     role="button">Choose plan</a></div>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="position-absolute top-100 end-0">
+                <div class="alert alert-warning alert-dismissible fade show d-inline" role="alert"><span><img
+                            src="icons/Vector.svg" alt=""></span> 20% off on next booking
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
             </div>
         </section>
